Bug 307834 - UI suggests it can change cookie policies per cookie
Summary: UI suggests it can change cookie policies per cookie
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: kcookiejar (other bugs)
Version First Reported In: Git
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Dawit Alemayehu
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-04 12:19 UTC by Christoph Feck
Modified: 2012-10-04 22:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Feck 2012-10-04 12:19:10 UTC
To reproduce:

- open cookie settings
- expand cookies list, e.g. for ".kde.org"
- note that the "Change Policy..." button is enabled when you selected a cookie, but not, if you selected the ".kde.org" Site entry
- try changing cookie policy for multiple cookies within the ".kde.org" site

Actual result:
- Konqueror says the policy has already been changed for ".kde.org".

Expected result:
- Either the "Change Policy..." button is enabled when selecting ".kde.org", or the UI allows changing the policy for each cookie separately.
Comment 1 Dawit Alemayehu 2012-10-04 22:17:04 UTC
Git commit 643a84000ff4881cae1ed81f7eb8e41bce177b82 by Dawit Alemayehu.
Committed on 04/10/2012 at 23:45.
Pushed by adawit into branch 'master'.

Enable change policy button only when the domain entry is clicked.
FIXED-IN:4.10

M  +2    -3    konqueror/settings/kio/kcookiesmanagement.cpp

http://commits.kde.org/kde-baseapps/643a84000ff4881cae1ed81f7eb8e41bce177b82