Enable change policy button only when the domain entry is clicked.

BUG: 307834
FIXED-IN:4.10